name:                db-extract
version:             0.1.0.0
synopsis:            Extracts a data segment from a relational database while preserving relational integrity.
description:         Please see README.md
homepage:            http://github.com/splondike/db-extract#readme
license:             GPL3
license-file:        LICENSE
author:              Stefan Schneider-Kennedy
maintainer:          code@stefansk.name
copyright:           2016 Stefan Schneider-Kennedy
category:            Utils
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ExtractData.Program,
                       ExtractData.Types,
                       ExtractData.SqlRenderer,
                       ExtractSchema.Program,
                       DataLayer,
                       DataLayer.Types,
                       Config
  other-modules:       DataLayer.MySql,
                       OrderedQueue
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       mysql,
                       mysql-simple,
                       aeson,
                       containers,
                       text,
                       bytedump,
                       unordered-containers,
                       bytestring

executable db-extract
  main-is:             Main.hs
  hs-source-dirs:      src-db-extract
  build-depends:       base >= 4.7 && < 5,
                       db-extract,
                       yaml,
                       text

executable db-extract-schema
  main-is:             Main.hs
  hs-source-dirs:      src-db-extract-schema
  build-depends:       base >= 4.7 && < 5,
                       db-extract,
                       containers,
                       yaml,
                       text

Test-Suite db-extract-tests
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      src-test
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       test-framework,
                       test-framework-hunit,
                       HUnit,
                       bytestring,
                       db-extract
